set(SOURCES
    action.cpp
    action.h
    auction_house.cpp
    auction_house.h
    basic.h
    bazaar_check.cpp
    bazaar_check.h
    bazaar_close.cpp
    bazaar_close.h
    bazaar_confirmation.cpp
    bazaar_confirmation.h
    bazaar_item.cpp
    bazaar_item.h
    bazaar_message.cpp
    bazaar_message.h
    bazaar_purchase.cpp
    bazaar_purchase.h
    blacklist.cpp
    blacklist.h
    campaign_map.cpp
    campaign_map.h
    change_music.cpp
    change_music.h
    char.cpp
    char.h
    char_abilities.cpp
    char_abilities.h
    char_appearance.cpp
    char_appearance.h
    char_check.cpp
    char_check.h
    char_emotion.cpp
    char_emotion.h
    char_equip.cpp
    char_equip.h
    char_health.cpp
    char_health.h
    char_job_extra.cpp
    char_job_extra.h
    char_jobs.cpp
    char_jobs.h
    char_mounts.cpp
    char_mounts.h
    char_recast.cpp
    char_recast.h
    char_skills.cpp
    char_skills.h
    char_spells.cpp
    char_spells.h
    char_stats.cpp
    char_stats.h
    char_sync.cpp
    char_sync.h
    char_update.cpp
    char_update.h
    chat_message.cpp
    chat_message.h
    chocobo_digging.cpp
    chocobo_digging.h
    conquest_map.cpp
    conquest_map.h
    cs_position.cpp
    cs_position.h
    currency1.cpp
    currency1.h
    currency2.cpp
    currency2.h
    delivery_box.cpp
    delivery_box.h
    downloading_data.cpp
    downloading_data.h
    entity_animation.cpp
    entity_animation.h
    entity_enable_list.cpp
    entity_enable_list.h
    entity_update.cpp
    entity_update.h
    entity_visual.cpp
    entity_visual.h
    event.cpp
    event.h
    event_string.cpp
    event_string.h
    event_update.cpp
    event_update.h
    event_update_string.cpp
    event_update_string.h
    fishing.cpp
    fishing.h
    furniture_interact.cpp
    furniture_interact.h
    guild_menu.cpp
    guild_menu.h
    guild_menu_buy.cpp
    guild_menu_buy.h
    guild_menu_buy_update.cpp
    guild_menu_buy_update.h
    guild_menu_sell.cpp
    guild_menu_sell.h
    guild_menu_sell_update.cpp
    guild_menu_sell_update.h
    independant_animation.cpp
    independant_animation.h
    instance_entry.cpp
    instance_entry.h
    inventory_assign.cpp
    inventory_assign.h
    inventory_finish.cpp
    inventory_finish.h
    inventory_item.cpp
    inventory_item.h
    inventory_modify.cpp
    inventory_modify.h
    inventory_size.cpp
    inventory_size.h
    key_items.cpp
    key_items.h
    linkshell_equip.cpp
    linkshell_equip.h
    linkshell_message.cpp
    linkshell_message.h
    lock_on.cpp
    lock_on.h
    macroequipset.cpp
    macroequipset.h
    map_marker.cpp
    map_marker.h
    menu_config.cpp
    menu_config.h
    menu_merit.cpp
    menu_merit.h
    menu_mog.cpp
    menu_mog.h
    menu_raisetractor.cpp
    menu_raisetractor.h
    merit_points_categories.cpp
    merit_points_categories.h
    message_basic.cpp
    message_basic.h
    message_combat.cpp
    message_combat.h
    message_name.cpp
    message_name.h
    message_special.cpp
    message_special.h
    message_standard.cpp
    message_standard.h
    message_system.cpp
    message_system.h
    message_text.cpp
    message_text.h
    party_define.cpp
    party_define.h
    party_effects.cpp
    party_effects.h
    party_invite.cpp
    party_invite.h
    party_map.cpp
    party_map.h
    party_member_update.cpp
    party_member_update.h
    party_search.cpp
    party_search.h
    pet_sync.cpp
    pet_sync.h
    position.cpp
    position.h
    quest_mission_log.cpp
    quest_mission_log.h
    release.cpp
    release.h
    release_special.cpp
    release_special.h
    roe_questlog.cpp
    roe_questlog.h
    roe_sparkupdate.cpp
    roe_sparkupdate.h
    roe_update.cpp
    roe_update.h
    server_ip.cpp
    server_ip.h
    server_message.cpp
    server_message.h
    shop_appraise.cpp
    shop_appraise.h
    shop_buy.cpp
    shop_buy.h
    shop_items.cpp
    shop_items.h
    shop_menu.cpp
    shop_menu.h
    status_effects.cpp
    status_effects.h
    stop_downloading.cpp
    stop_downloading.h
    synth_animation.cpp
    synth_animation.h
    synth_message.cpp
    synth_message.h
    synth_result.cpp
    synth_result.h
    synth_suggestion.cpp
    synth_suggestion.h
    timer_bar_util.cpp
    timer_bar_util.h
    trade_action.cpp
    trade_action.h
    trade_item.cpp
    trade_item.h
    trade_request.cpp
    trade_request.h
    trade_update.cpp
    trade_update.h
    treasure_find_item.cpp
    treasure_find_item.h
    treasure_lot_item.cpp
    treasure_lot_item.h
    trust_sync.cpp
    trust_sync.h
    weather.cpp
    weather.h
    wide_scan.cpp
    wide_scan.h
    wide_scan_track.cpp
    wide_scan_track.h
    world_pass.cpp
    world_pass.h
    zone_in.cpp
    zone_in.h
    zone_visited.cpp
    zone_visited.h)

add_library(packets STATIC ${SOURCES})

target_link_libraries(packets
    PUBLIC
    common
    project_options
    #project_warnings
)
